--- a/docs/theme.css
+++ b/docs/theme.css
@@ -29,6 +29,7 @@ html {
   --body-color:      rgba(0, 0, 0, 0.8);
   --aside-color:     rgba(0, 0, 0, 0.6);
   --fig-cap-color:   rgba(0, 0, 0, 0.6);
+  --navbar-color:    rgba(255, 0, 0, 0.6);
   /*-- Specify custom fonts ~~~ must be imported above   --*/
   --heading-font:    Atkinson Hyperlegible;
   --mono-font:       monospace;
