--- a/theme.css
+++ b/theme.css
@@ -97,7 +97,8 @@ d-appendix {
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 12px 6px -6px #999;
 
-    /* the rest of your styling */
+/* Button styling */
+
 }
 
 .btn-outline-dark:hover {
@@ -109,3 +110,12 @@ d-appendix {
 img {
   height: 15rem;
 }
+
+/* Blog post styling */
+
+.posts-list .post-preview .thumbnail img { width: 100%; display: block; }
+
+
+
+
+
